# cp-workbench

./: .gitignore  build-dmg.sh  index.html  package-lock.json  package.json  run-dev.sh  vite.config.ts
docs/superpowers/plans/: 2026-06-07-bugfix-a.md  2026-06-07-enhanced-history.md  2026-06-07-polish-v2.md
docs/superpowers/specs/: 2026-06-07-bugfix-a-design.md  2026-06-07-cp-workbench-design.md  2026-06-07-enhanced-history-design.md
releases/: cp-workbench_latest.dmg
scripts/: gen_icon.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  commands.rs  compiler.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  runner.rs  stress.rs  workspace.rs
src-tauri/templates/: blank_cpp17.cpp  blank_cpp20.cpp  codeforces.cpp  fast_io.cpp  pbds.cpp
src-tauri/tests/: feature_tests.rs
src/components/: ConfirmDialog.tsx  DataManagement.tsx  Editor.tsx  GroupManager.tsx  InputPanel.tsx  Layout.tsx  OutputPanel.tsx  ProblemSidebar.tsx  RunToolbar.tsx  StatusBar.tsx  StressTest.tsx  TagManager.tsx  WorkspaceGenerator.tsx
src/hooks/: useKeyBindings.ts  useTheme.ts
src/lib/: tauri.ts  types.ts
src/store/: useStore.ts
src/styles/: design.css
