[package]
name = "cp-workbench"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "cp_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
scraper = "0.20"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
regex = "1"
libc = "0.2"
dirs = "5"

[[test]]
name = "feature_tests"
path = "tests/feature_tests.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
